--- a/test/css/style.css
+++ b/test/css/style.css
@@ -47,3 +47,8 @@ textarea.js-code-to-run {
     font-size: 16px;
     height: 30px;
 }
+
+/* console colors */
+pre span.info  { color: #004AA0; }
+pre span.error { color: red; }
+pre span.warn  { color: rgb(255, 133, 0); }
